# GBBrain

./: .gitignore  Cargo.toml  LICENSE  README.md
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/gb/: Cargo.toml
crates/gb/src/: cartridge.rs  hardware.rs  lib.rs  state.rs  tests.rs  traits_impl.rs
docs/: ai-interface.md  current-status.md  implementation-plan.md  test-roms.md
