[package]
name = "gbbrain-cli"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
base64 = "0.22"
gbbrain-core = { path = "../core" }
gbbrain-gb = { path = "../gb" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"

[[bin]]
name = "gbbrain"
path = "src/main.rs"
